--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -88,12 +88,12 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#39c;
+  color:#C70039;
   text-decoration:none;
 }
 
 a:hover {
-  color:#069;
+  color:#900C3F;
 }
 
 a small {
