--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -103,7 +103,7 @@ footer p {
 
 a {
   text-decoration: none;
-  color: #069;
+  color: #900C3F;
   text-shadow: none;
 
   transition: color 0.5s ease;
