--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,15 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        
+        <p><a href="http://metal.equinix.com/">metal.equinix.com</a><br>
+          <a href="https://slack.equinixmetal.com/">slack.equinixmetal.com</a><br>
+          <a href="http://eqix-metal-community.slack.com">eqix-metal-community.slack.com</a></p>
+        
+        <p><b>Have a question or need help?</b><br><br>
+          We're available 24/7/365. Please visit us on slack or contact us directly:<br><br>
+          +1 212-933-9785
+          <a href="mailto:support@equinixmetal.com">support@equinixmetal.com</a></p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
