--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p>The [Equinix Metal Community](http://eqix-metal-community.slack.com/) is a space for bare metal developers, collaborators, and friends to chat and support one another in an inclusive, playful, and so very metal space.</p>
         
         <p>Don't already have access to our slack, please visit <a href="https://slack.equinixmetal.com/">slack.equinixmetal.com</a> for an invite!</p>
         
