--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,10 @@
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        
+        {% if site.logo %}
+          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% endif %}
 
         <p>The <a href="http://eqix-metal-community.slack.com/">Equinix Metal Community</a> is a space for bare metal developers, collaborators, and friends to chat and support one another in an inclusive, playful, and so very metal space.</p>
         
