--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <!--<h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>-->
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
-
+        <p> </p>
+        
         <p>The <a href="http://eqix-metal-community.slack.com/">Equinix Metal Community</a> is a space for bare metal developers, collaborators, and friends to chat and support one another in an inclusive, playful, and so very metal space.</p>
         
         <p>Don't already have access to our slack, please visit <a href="https://slack.equinixmetal.com/">slack.equinixmetal.com</a> for an invite!</p>
