--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -88,12 +88,12 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#C70039;
+  color:#ED1C24;
   text-decoration:none;
 }
 
 a:hover {
-  color:#900C3F;
+  color:#AF0E14;
 }
 
 a small {
